--- a/client/src/css/RecuperarApp.css
+++ b/client/src/css/RecuperarApp.css
@@ -1,80 +1,82 @@
 /* -----> Estilos para la pantalla de carga... <----- */
 .screen-loading {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
   
-  .spinner {
-    border: 6px solid #ffffff;
-    border-top: 6px solid #81818200;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-  }
+.spinner {
+  border: 6px solid #ffffff;
+  border-top: 6px solid #81818200;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
   
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 .ContainerRecuperar{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 0 5px 2px #0000007f;
-    padding: 40px;
-    border-radius: 12px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 5px 2px #0000007f;
+  padding: 40px;
+  border-radius: 12px;
 }
 
 .ContainerRecuperar h1{
-    text-align: center;
-    color: #fff;
-    margin-bottom: 25px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 25px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .FormRecuperar .form-label{
-    color: #fff;
+  color: #fff;
 }
   
 .FormRecuperar .form-control{
-    outline: 0 !important;
-    border: 0 !important;
-    max-width: 100%;
-    background-color: transparent !important;
-    color: #fff !important;
-    box-shadow: 0 0 5px 1px #0000007f !important;
-    transition: all .3s ease-in-out !important;
+  outline: 0 !important;
+  border: 0 !important;
+  max-width: 100%;
+  background-color: transparent !important;
+  color: #fff !important;
+  box-shadow: 0 0 5px 1px #0000007f !important;
+  transition: all .3s ease-in-out !important;
 }
   
 .FormRecuperar .form-control:focus{
-    transition: all .3s ease-in-out !important;
-    box-shadow: 0 0 5px 0 #1615159b !important;
+  transition: all .3s ease-in-out !important;
+  box-shadow: 0 0 5px 0 #1615159b !important;
 }
   
 .FormRecuperar .form-control::placeholder{
-    color: #ffffffb7 !important;
+  color: #ffffffb7 !important;
 }
 
 .FormRecuperar button{
-    border: 0 !important;
-    display: block;
-    margin: 0 auto !important;
-    grid-column: 1 / 3;
-    background-color: #000;
+  border: 0 !important;
+  display: block;
+  margin: 0 auto !important;
+  grid-column: 1 / 3;
+  background-color: #000;
+  transition: all .3s ease-in-out;
 }
   
 .FormRecuperar button:hover{
-    background-color: rgb(37, 37, 37) !important;
+  transition: all .3s ease-in-out;
+  background-color: rgb(37, 37, 37) !important;
 }
 
 /* Estilos Responsivos */
@@ -104,5 +106,57 @@
 }
 
 .modal-header{
+  margin: 0 auto !important;
   border-bottom: 0 !important;
+}
+
+/* Estilos para el input de contraseña */
+.FormCambiarContrasena .form-control{
+  outline: 0 !important;
+  border: 0 !important;
+  max-width: 100%;
+  background-color: transparent !important;
+  color: #fff !important;
+  box-shadow: 0 0 5px 1px #0000007f !important;
+  transition: all .3s ease-in-out !important;
+}
+
+@media (max-width: 580px){
+  .modal{
+    display: flex !important;
+    justify-content: center !important;
+    width: 100% !important;
+  }
+
+  .FormCambiarContrasena .form-control{
+    width: 250px !important;
+  }
+}
+
+/* Estilos para el icono de mostrar y ocultar contraseña */
+.Password{
+  position: relative;
+}
+
+.EyeIcon1,
+.EyeIcon2{
+  position: absolute;
+  top: 75%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+/* Estilo para el botón de "Cambiar" contraseña */
+.FormCambiarContrasena button{
+  display: block !important;
+  margin: 0 auto !important;
+  border: 0 !important;
+  background-color: #000 !important;
+  transition: all .3s ease-in-out;
+}
+
+.FormCambiarContrasena button:hover{
+  transition: all .3s ease-in-out;
+  background-color: rgb(37, 37, 37) !important;
 }
