--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 body{
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, #1c8aff 10%, #050e56 100%) !important;
+  background: linear-gradient(45deg, #1c8aff 10%, #1d33da 100%) !important;
   background-attachment: fixed !important;
   font-family: 'Oswald', sans-serif !important;
 }
