--- a/client/src/css/FacturarApp.css
+++ b/client/src/css/FacturarApp.css
@@ -144,10 +144,12 @@ input[type=number] { -moz-appearance:textfield; }
     color: rgb(177, 176, 176) !important;
 }
 
-.table-facture tbody, td, tfoot, th, thead, tr{
-    border-style: none !important;
+.table-facture tbody, td, th, thead, tr{
+    border-style:groove !important;
+    border-color: rgb(34, 0, 172) !important;
     background-color: transparent !important;
-    color: #fff !important;
+    color: #000 !important;
+    text-align: center !important;
 }
 
 thead tr{
@@ -238,7 +240,7 @@ tbody tr{
 
 .title-PLR h2{
     text-align: center;
-    color: #000;
+    color: rgb(34, 0, 172);
     font-weight: 600;
     letter-spacing: 3px;
 }
@@ -248,6 +250,11 @@ tbody tr{
     justify-content: space-between;
     align-items: center;
     color: #000;
+}
+
+.Header1 .co-header1 h2,
+.info-client h4{
+    color: rgb(34, 0, 172);
 }
 
 .Header1 .co-header1 h6{
@@ -284,7 +291,12 @@ tbody tr{
     color: #000;
 }
 
+
 .info-client h4{
     font-weight: 600;
     letter-spacing: 2px;
+}
+
+.text h5{
+    color: rgb(34, 0, 172);
 }
